--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,9 +19,11 @@ jobs:
           python-version: "3.11"
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+      
       - name: Run tests
         run: |
+          python -m pip install --upgrade pip
+          pip install -r "app/routes/Fast API/requirements.txt"
           cd backend
           pytest
 
