--- a/.yaml/.github/workflows/ci-cd.yml
+++ b/.yaml/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
+          pip install -r app/routes/fastapi/requirements.txt
       - name: Run tests
         run: |
           cd backend
