--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Run tests
         run: |
           python -m pip install --upgrade pip
-          pip install -r "app/routes/Fast API/requirements.txt"
+          pip install -r "app/routes/fastapi/requirements.txt"
           cd backend
           pytest
 
