Add Terraform infra and GitHub Actions workflow

--- a/.yaml/deploytf.yml
+++ b/.yaml/deploytf.yml
@@ -1,23 +1,68 @@
-  deploy:
-    needs: build-and-push
+name: CI/CD to AWS ECS
+
+on:
+  push:
+    branches:
+      - main  # Runs when you push to main branch
+
+jobs:
+  #######################################################
+  # 1️⃣ Build and Push Docker Image to Amazon ECR
+  #######################################################
+  build-and-push:
     runs-on: ubuntu-latest
+    env:
+      AWS_REGION: us-east-1
+      ECR_REPO: 611837360680.dkr.ecr.us-east-1.amazonaws.com/myapp  # <-- change if your ECR repo name differs
+
     steps:
       - uses: actions/checkout@v4
+
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-      - name: Terraform init
+
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Build, tag, and push Docker image
         run: |
-          cd infra
-          terraform init -input=false
-      - name: Terraform apply
+          docker build -t $ECR_REPO:${{ github.sha }} .
+          docker push $ECR_REPO:${{ github.sha }}
+
+  #######################################################
+  # 2️⃣ Deploy to AWS ECS using Terraform
+  #######################################################
+  deploy:
+    needs: build-and-push   # Waits for build-and-push to finish
+    runs-on: ubuntu-latest
+    env:
+      AWS_REGION: us-east-1
+      ECR_REPO: 611837360680.dkr.ecr.us-east-1.amazonaws.com/myapp
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init
+        working-directory: infra
+        run: terraform init -input=false
+
+      - name: Terraform Apply
+        working-directory: infra
         env:
           IMAGE_URI: ${{ env.ECR_REPO }}:${{ github.sha }}
-        run: |
-          cd infra
-          terraform apply -auto-approve -var "image_uri=$IMAGE_URI"
+        run: terraform apply -auto-approve -var "image_uri=${IMAGE_URI}"
