--- a/.yaml/deploytf.yml
+++ b/.yaml/deploytf.yml
@@ -1,69 +1,76 @@
-name: CI/CD to AWS ECS
+name: Build, Push, and Deploy
 
 on:
   push:
     branches:
-      - main  
+      - main
+
+env:
+  AWS_REGION: eu-north-1
+  ECR_REPO: 611837360680.dkr.ecr.eu-north-1.amazonaws.com/myapp  # Your ECR repo
 
 jobs:
   build-and-push:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    env:
-      AWS_REGION: eu-north-1
-      ECR_REPO: 611837360680.dkr.ecr.eu-north-1.amazonaws.com/myapp
-      
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Login to Amazon ECR
+      - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v2
         with:
-        registry-type: private
+          registry-type: private
         env:
           AWS_REGION: ${{ env.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Build, tag, and push Docker image
+      - name: Build Docker image
         run: |
-          docker build -t $ECR_REPO:${{ github.sha }} .
+          docker build -t myapp:${{ github.sha }} .
+
+      - name: Tag Docker image
+        run: |
+          docker tag myapp:${{ github.sha }} $ECR_REPO:${{ github.sha }}
+
+      - name: Push Docker image to ECR
+        run: |
           docker push $ECR_REPO:${{ github.sha }}
 
   deploy:
-    needs: build-and-push   
+    name: Deploy to ECS via Terraform
+    needs: build-and-push
     runs-on: ubuntu-latest
-    env:
-      AWS_REGION: eu-north-1
-      ECR_REPO: 611837360680.dkr.ecr.eu-north-1.amazonaws.com/myapp
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+        uses: hashicorp/setup-terraform@v2
 
-      - name: Terraform Init
-        working-directory: infra
-        run: terraform init -input=false
+      - name: Terraform init
+        run: |
+          cd infra
+          terraform init -input=false
 
-      - name: Terraform Apply
-        working-directory: infra
-        variable:
-          - image_uri=${IMAGE_URI}
+      - name: Terraform apply
         env:
           IMAGE_URI: ${{ env.ECR_REPO }}:${{ github.sha }}
-        run: terraform apply -auto-approve -var "image_uri"
+        run: |
+          cd infra
+          terraform apply -auto-approve -var "image_uri=$IMAGE_URI"
